# data-flow-control

./: .gitignore  .gitmodules  AGENTS.md  README.md  bedrock_getting_started.sh  make_chunks.py  pinecone_demo.py  setup.md
Tax_agent_implementation_with_DFC/sql_rewriter/: .gitignore  pyproject.toml  test_rewrite_rule.py  test_two_phase_rewriter.py  use_local_duckdb.py  uv_with_local_duckdb.sh
experiment_harness/: README.md  pyproject.toml
experiment_harness/results/: results.csv
experiment_harness/tests/: test_runner.py
langchain_hooks/: basic_agent.py  callbacks.py  db_conn.py  db_connection.py  duckdb_tool.py  factory.py  hooks.py  list_bedrock_models.py  llm_bedrock.py  logging.py  main.py  middleware.py  policies.txt  pyproject.toml  test_beadrock.py
langchain_hooks/middlewares/: base.py
passant/: Cargo.toml  README.md  pyproject.toml
passant/passant-cli/: Cargo.toml
passant/passant-core/: Cargo.toml
passant/passant-py/: Cargo.toml
relational_tool_wrapper/: README.md  mcp_server.py  pyproject.toml  requirements.txt  test_with_dummy_data.py
sbo_tax_agent/: README.md  __init__.py  agent.py  app.py  bedrock_getting_started.sh  db.py  db_example.py  pyproject.toml  recording.py  replay.py  setup_local_duckdb.sh  test_aws_bedrock.py  use_local_duckdb.py  utils.py
sbo_tax_agent/pages/: 1_Upload_Data.py  2_Create_Policies.py  3_Propose_Taxes.py
shared_sql_utils/: README.md  pyproject.toml
shared_sql_utils/tests/: conftest.py  test_constraints.py
sql_rewriter/: AGENTS.md  README.md  policy.py  pyproject.toml  rewrite_rule.py  rewriter.py  setup_local_duckdb.sh  sqlglot_utils.py  test_aggregate_policy.py  test_policy.py  test_rewrite_rule.py  test_rewriter.py  test_tpch.py  test_tpch_policy_count.py  test_tpch_two_phase.py  test_two_phase_rewriter.py
vldb_2026_big_paper_experiments/: README.md  aws_setup.md  pyproject.toml  setup_local_smokedduck.sh  setup_venv.sh
vldb_2026_big_paper_experiments/agent_harness/: README.md  __init__.py  agent.py  config.py  llm_factory.py  main.py  sql_tool.py
vldb_2026_big_paper_experiments/final_results/: llm_validation_table.csv  llm_validation_table.tex  microbenchmark_phase_competition.csv  microbenchmark_results_policy1.csv  tpch_multi_db_sf1_default_merged.csv  tpch_q01_policy_count_sf1_optimized.csv  tpch_results_sf10.csv
vldb_2026_big_paper_experiments/results/: llm_validation_grid_dfc_only_policy1.csv  llm_validation_grid_dfc_only_policy1_k26.csv  llm_validation_grid_dfc_only_policy4.csv  llm_validation_grid_results_policy1_k26_results_only.csv  llm_validation_grid_results_policy4_results_only.csv  llm_validation_grid_results_policy8_results_only.csv  llm_validation_grid_smoke_sf0.1.csv  llm_validation_grid_smoke_sf0.1_gpt_only.csv  llm_validation_grid_smoke_sf0.1_openai.csv  llm_validation_policy_query_grid.csv  llm_validation_policy_query_grid_smoke.csv  llm_validation_policy_query_grid_supported_only.csv  llm_validation_results_full_gpt52_opus46.csv  llm_validation_results_gpt52_full.csv  llm_validation_results_gpt52_minimal.csv  llm_validation_results_opus_smoke.csv  microbenchmark_group_by_policy_count.csv  microbenchmark_join16_policy16_32_64_128.csv  microbenchmark_join_group_by_policy100_16_32_64_128_perjoin_warmup_measured.csv  microbenchmark_join_group_by_policy100_16_32_64_128_perjoin_warmup_measured_with_physical.csv  microbenchmark_join_group_by_policy100_16_32_64_128_perjoin_warmup_raw.csv  microbenchmark_join_group_by_policy100_16_32_64_128_perjoin_warmup_raw_with_physical.csv  microbenchmark_join_group_by_policy100_j8_16_32_64.csv  microbenchmark_join_group_by_policy1_16_32_64_128_perjoin_warmup_measured.csv  microbenchmark_join_group_by_policy1_16_32_64_128_perjoin_warmup_raw.csv  microbenchmark_join_group_by_policy1_1_2_4_8_16_32.csv  microbenchmark_join_group_by_policy1_1_2_4_8_16_32_perjoin_warmup_measured.csv  microbenchmark_join_group_by_policy1_1_2_4_8_16_32_perjoin_warmup_raw.csv  microbenchmark_join_group_by_policy1_v3.csv  microbenchmark_join_group_by_policy_count_j1_2_4_8_p1_10_100.csv  microbenchmark_join_group_by_smoke.csv  microbenchmark_join_simpleagg_groupby.csv  microbenchmark_phase_competition.csv  microbenchmark_policy_count_harness_smoke.csv  microbenchmark_results.csv  microbenchmark_results_group_by_only.csv  microbenchmark_results_policy1.csv  microbenchmark_results_policy1000.csv  microbenchmark_results_policy1_physical_runtime_smoke.csv  microbenchmark_results_simple_agg_policy1.csv  (+92 more)
vldb_2026_big_paper_experiments/scripts/: analyze_llm_validation_policy_grid.py  diff_policy_count_sql.py  generate_final_visualizations.py  generate_llm_validation_grid_visualizations.py  generate_llm_validation_latex_table.py  generate_llm_validation_table.py  generate_llm_validation_visualization.py  generate_microbenchmark_phase_competition_heatmap.py  generate_microbenchmark_policy_count_figure.py  generate_microbenchmark_table_width_figure.py  generate_multi_db_engine_figures.py  generate_multi_db_engine_summary.py  generate_multi_source_visualizations.py  generate_state_transition_bar_chart.py  generate_tpch_duckdb_capped_overhead.py  generate_tpch_policy_count_optimized_figure.py  generate_tpch_self_join_policy_figure.py  print_tax_receipts_seed_data.py  run_llm_validation_experiment.py  run_llm_validation_grid_experiment.py  run_microbenchmark_phase_competition_experiment.py  run_microbenchmark_policy_count_experiment.py  run_microbenchmark_table_width_experiment.py  run_microbenchmarks.py  run_microbenchmarks_with_smokedduck.sh  run_multi_source_experiment.py  run_sqlserver_tpch_sf1_full.py  run_state_transition_experiment.py  run_state_transition_llm_experiment.py  run_synthetic_llm_validation_grid_experiment.py  run_tax_agent_experiment.py  run_tpch_experiments.py  run_tpch_multi_db.py  run_tpch_policy_complexity_experiment.py  run_tpch_policy_count_all_queries.py  run_tpch_policy_count_experiment.py  run_tpch_policy_many_ors_experiment.py  run_tpch_self_join_policy_experiment.py  wait_and_visualize.sh
vldb_2026_big_paper_experiments/temp_export/: load.sql  schema.sql  (+1 more)
(+164 files in other folders)
