[project]
name = "langchain-hooks"
version = "0.1.0"
description = "LangChain hooks for SQL tool execution"
requires-python = ">=3.9"
dependencies = [
    "sql-rewriter",
    "sqlglot>=24.0.0",
    "duckdb==1.4.1",
    "numpy>=1.24.4",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",

    # ✅ LangChain stack
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.2.0"
]
