[workspace]
members = [
    "passant-core",
    "passant-cli",
    "passant-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Charlie Summers"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.23", features = ["abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = { version = "0.53", features = ["serde"] }
thiserror = "2.0"
