[project]
name = "passant"
version = "0.1.0"
description = "Rust-backed Data Flow Control rewrite engine"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
    "duckdb>=1.3.0",
    "numpy>=1.24.4",
    "sqlglot==28.3.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.7.0",
    "pytest>=8.4.2",
    "ruff>=0.11.0",
]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "passant-py/Cargo.toml"
python-source = "python"
module-name = "passant._passant"
features = ["extension-module"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]

[tool.ruff]
line-length = 100
target-version = "py39"
