[project]
name = "relational-tool-wrapper"
version = "0.1.0"
description = "MCP server that wraps tools so agents must use deterministic SQL to construct inputs"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.0",
    "mcp[cli]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
line-length = 100
