[project]
name = "sbo-tax-agent"
version = "0.1.0"
description = "Small business owner tax agent using sql_rewriter and extended_duckdb"
requires-python = ">=3.8"
dependencies = [
    "sql-rewriter",
    "sqlglot>=24.0.0",
    "duckdb>=1.0.0",
    "numpy>=1.24.4",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
]

[tool.uv.sources]
sql-rewriter = { path = "../sql_rewriter", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbo_tax_agent"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".venv", "__pycache__"]

