[project]
name = "shared-sql-utils"
version = "0.1.0"
description = "Shared SQL utility helpers."
requires-python = ">=3.9"
dependencies = [
    "sqlglot>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_sql_utils"]

[tool.ruff]
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "ARG",
    "PIE",
    "PT",
    "RET",
    "TCH",
    "TID",
    "Q",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "PT011",
]

[tool.ruff.lint.isort]
known-first-party = ["shared_sql_utils"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pytest.fixture"]
staticmethod-decorators = ["staticmethod"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
