[project]
name = "sql-rewriter"
version = "0.1.0"
description = "SQL rewriter using sqlglot for query transformation"
requires-python = ">=3.9"
dependencies = [
    "sqlglot>=24.0.0",
    "duckdb==1.4.1",
    "numpy>=1.24.4",
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".venv", "__pycache__"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sql_rewriter"]

