[package]
name = "passant-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
extension-module = ["pyo3/extension-module"]

[lib]
name = "_passant"
crate-type = ["cdylib", "rlib"]

[dependencies]
passant-core = { path = "../passant-core" }
pyo3 = { workspace = true, features = ["auto-initialize"] }
serde_json.workspace = true
